--- a/app/static/homepage.html
+++ b/app/static/homepage.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset=UTF-8>
+        <title>Galgalim Engine</title>
+        <script src="/frontend.js"></script>
+    </head>
+    <body>
+        <b>Hello world!</b>
+
+        I am serving HTML
+    </body>
+</html>
