--- a/app/static/homepage.html
+++ b/app/static/homepage.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script>
+        async function main(){
+            let response = await fetch('/instance', { method: "POST"});
+            console.log(response);
+            let json = await response.json();
+            console.log(json);
+        }
+        main();
+    </script>
+
     <head>
         <meta charset="UTF-8" />
         <title>Galgalim Engine</title>
     </head>
-    <button>Start new game</button>
-    <p></p>
-    <input type="text" />
-    <button>Join existing game</button>
 </html>
