--- a/app/static/homepage.html
+++ b/app/static/homepage.html
@@ -3,7 +3,7 @@
     <script>
         fetch("/instance", { method: "POST" })
             .then((response) => response.json())
-            .then((newInstance) => window.location.replace(`/instance/${newInstance.id}`));
+            .then((newInstance) => window.location.replace(`/instance/${newInstance.ID}`));
     </script>
     <head>
         <meta charset="UTF-8" />
