--- a/app/static/game.html
+++ b/app/static/game.html
@@ -10,6 +10,7 @@
             defer
         ></script>
         <script src="/frontend.js"></script>
+        <script src="/draco_gltf.js"></script>
     </head>
     <body>
         <canvas id="glCanvas" width="640" height="480"></canvas>
